Fix BG color on page overflow

--- a/database/apex/workspace_files/master_app.css
+++ b/database/apex/workspace_files/master_app.css
@@ -1,6 +1,7 @@
 /* REMOVE BACKGROUND IMAGE */
 body {
     background-image    : none !important;
+    background-color    : var(--ut-body-main-background-color);
 }
 
 
